fix(webview): keep a single todo in edit mode to remove flicker

--- a/webview-ui/src/app/todo/todo-item/todo-item.component.scss
+++ b/webview-ui/src/app/todo/todo-item/todo-item.component.scss
@@ -70,6 +70,12 @@
 		width: 100%;
 		padding: 0 0.5rem;
 
+		.edit-mode-wrapper {
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+		}
+
 		div.todo-text {
 			font-size: var(--app-font-size);
 			font-family: var(--app-font-family);
